Disabled anime on scroll

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Fonts -->
@@ -230,31 +230,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1400">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="far fa-fire fa-5x ci-color"></i>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">Codeigniter</h5>
-              </div>
-            </div>
-          </div> -->
-          <!-- <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1600">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-java fa-5x java-color"></i>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">Java</h5>
-              </div>
-            </div>
-          </div> -->
-          
         </div>
       </div>
     </section>
@@ -479,146 +454,3 @@
   </body>
 </html>
 
-
-<!-- <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="col-3 col-md-5 col-lg-3 border rounded-lg py-3 text-center">
-                  <i class="fab fa-html5 fa-lg html5-color"></i>
-                </div>
-                <h5 class="card-title mt-4">HTML 5</h5>
-                  <p class="card-text text-dark">The HyperText Markup Language, or HTML is the standard markup language for documents...</p>
-                  <p class="card-text"><small class="text-muted">Learn more</small></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="col-3 col-md-5 col-lg-3 border rounded-lg py-3 text-center">
-                  <i class="fab fa-css3-alt fa-lg css3-color"></i>
-                </div>
-                <h5 class="card-title mt-4">CSS3</h5>
-                <p class="card-text text-dark">Cascading Style Sheets is a style sheet language used for describing the presentation...</p>
-                <p class="card-text"><small class="text-muted">Learn more</small></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="col-3 col-md-5 col-lg-3 border rounded-lg py-3 text-center">
-                  <i class="fab fa-js fa-lg js-color"></i>
-                </div>
-                <h5 class="card-title mt-4">JavaScript</h5>
-                <p class="card-text text-dark">often abbreviated as JS, is a programming language that conforms to the ECMAScript...</p>
-                <p class="card-text"><small class="text-muted">Learn more</small></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="col-3 col-md-5 col-lg-3 border rounded-lg py-3 text-center">
-                  <i class="fab fa-bootstrap bootstrap-color"></i>
-                </div>
-                <h5 class="card-title mt-4">Bootstrap</h5>
-                <p class="card-text text-dark">Bootstrap is a free and open-source CSS framework directed at responsive, for web development...</p>
-                <p class="card-text"><small class="text-muted">Learn more</small></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="col-3 col-md-5 col-lg-3 border rounded-lg py-3 text-center">
-                  <i class="fab fa-php php-color"></i>
-                </div>
-                <h5 class="card-title mt-4">PHP</h5>
-                <p class="card-text text-dark">Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
-                <p class="card-text"><small class="text-muted">Learn more</small></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="col-3 col-md-5 col-lg-3 border rounded-lg py-3 text-center">
-                  <i class="fab fa-laravel laravel-color"></i>
-                </div>
-                <h5 class="card-title mt-4">Laravel</h5>
-                <p class="card-text text-dark">Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
-                <p class="card-text"><small class="text-muted">Learn more</small></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="col-3 col-md-5 col-lg-3 border rounded-lg py-3 text-center">
-                  <i class="far fa-fire ci-color"></i>
-                </div>
-                <h5 class="card-title mt-4">Codeigniter</h5>
-                <p class="card-text text-dark">Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
-                <p class="card-text"><small class="text-muted">Learn more</small></p>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-6 col-lg-3 mb-3">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="col-3 col-md-5 col-lg-3 border rounded-lg py-3 text-center">
-                  <i class="fab fa-java java-color"></i>
-                </div>
-                <h5 class="card-title mt-4">Java</h5>
-                <p class="card-text text-dark">Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
-                <p class="card-text"><small class="text-muted">Learn more</small></p>
-              </div>
-            </div>
-          </div> -->
-
-    <!-- <section class="plan mt-5">
-      <div class="container">
-        <div class="row">
-          <div class="col">
-            <h3>Choose the plan that’s right for your business</h3>
-            <p>Lorem ipsum dolor sit amet, coectetur adipiscing elit. Suspendisse varius enim in eros .</p>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <div class="card-body border-biru text-center">
-                <h5 class="card-title">Started Plan</h5>
-                <h1 class="card-text harga-plan-biru">Free</h1>
-                <p class="card-text"><small class="text-muted">per month</small></p>
-                <p class="card-text my-4"><small class="text-muted">Lorem ipsum dolor sit amet,<br> coectetur adipiscing elit. </small></p>
-                <a href="#" class="btn btn-outline-dark rounded-pill px-4">Get Started</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <div class="card-body border-hijau text-center">
-                <h5 class="card-title">Started Plan</h5>
-                <h1 class="card-text harga-plan-hijau">$20.00</h1>
-                <p class="card-text"><small class="text-muted">per month</small></p>
-                <p class="card-text my-4"><small class="text-muted">Lorem ipsum dolor sit amet,<br> coectetur adipiscing elit. </small></p>
-                <a href="#" class="btn btn-outline-dark rounded-pill px-4">Get Started</a>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-4 mb-3">
-            <div class="card">
-              <div class="card-body border-merah text-center">
-                <h5 class="card-title">Started Plan</h5>
-                <h1 class="card-text harga-plan-merah ">$50.00</h1>
-                <p class="card-text"><small class="text-muted">per month</small></p>
-                <p class="card-text my-4"><small class="text-muted">Lorem ipsum dolor sit amet,<br> coectetur adipiscing elit. </small></p>
-                <a href="#" class="btn btn-outline-dark rounded-pill px-4">Get Started</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section> -->
