major update portfolio

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <!-- <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet"> -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Fonts -->
@@ -43,15 +43,16 @@
     <section class="hero" id="hero">
       <div class="container">
         <div class="row banner justify-content-between mt-5" data-aos="fade-down" data-aos-delay="200">
-          <div class="col-lg-6 mt-5">
-            <h3>Hello<br> I'm a Web Developer</h3>
+          <div class="col-lg-7 mt-5">
+            <h3>Hello<br> I'm a Full Stack Developer</h3>
             <!-- <h3>Hello<br> My Name is Ananda Arya Pratama</h3> -->
-            <p class="my-3">My name is Ananda Arya Pratama from Banjarmasin. graduated from major in Software Engineering</p>
+            <p class="my-3">I am a Software Engineering graduate and an IT Enthusiast. My areas of expertise include both front-end 
+              and back-end development.</p>
             <a href="#" class="btn btn-primary px-4 my-3">View Project</a>
             <a href="#" class="btn btn-outline-primary px-3 my-4 ml-2">Learn More</a>
           </div>
           <div class="col-lg-5">
-            <img src="img/hero-img-2.png" class="img-fluid">
+            <img src="img/hero-img-3.png" class="img-fluid">
           </div>
         </div>
       </div>
@@ -234,7 +235,7 @@
       </div>
     </section>
 
-    <section class="services2" id="services2">
+    <section class="projects" id="projects">
       <div class="container">
         <div class="row" data-aos="fade-down">
           <div class="col">
@@ -246,10 +247,24 @@
           </div>
         </div>
         <div class="row justify-content-between">
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
+            <img src="img/portfolio-12.jpg" class="img-fluid img-portfolio border" alt="Services5">
+          </div>
+          <div class="col-lg-6 my-2 my-lg-5">
+            <h4 class="mt-lg-5">JIE Community Website Profile |</h4>
+            <p class="btn btn-outline-info p-1">JavaScript</p>
+            <p class="btn btn-outline-info p-1">NextJS</p>
+            <p class="btn btn-outline-info p-1">ReactJS</p>
+            <p class="btn btn-outline-info p-1">TailwindCSS</p>
+            <hr class="d-none d-lg-block">
+            <p>platform that caters to gaming enthusiasts, providing a seamless and
+              secure top-up service for various popular games</p>
+            <hr class="d-sm-block d-lg-none">
+          </div>
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-0.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">Website Topup Voucher Game</h4>
             <p class="btn btn-outline-info p-1">Typescript</p>
             <p class="btn btn-outline-info p-1">NextJS</p>
@@ -257,13 +272,14 @@
             <p class="btn btn-outline-info p-1">Express</p>
             <p class="btn btn-outline-info p-1">MongoDB</p>
             <hr class="d-none d-lg-block">
-            <p>Website for top up or buy online game vouchers</p>
+            <p>platform that caters to gaming enthusiasts, providing a seamless and
+              secure top-up service for various popular games</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-10.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">Link Manager</h4>
             <p class="btn btn-outline-info p-1">PHP</p>
             <p class="btn btn-outline-info p-1">Laravel</p>
@@ -275,10 +291,10 @@
             <p>Manage your links, you can track statistics data per day or month</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-2.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">Restaurant Website</h4>
             <p class="btn btn-outline-info p-1">PHP</p>
             <p class="btn btn-outline-info p-1">Laravel</p>
@@ -289,20 +305,35 @@
             <p>Restaurant website, to manage all restaurant data</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
+            <img src="img/portfolio-3.png" class="img-fluid img-portfolio border" alt="Services5">
+          </div>
+          <div class="col-lg-6 my-2 my-lg-5">
+            <h4 class="mt-lg-5">Web Account Manager</h4>
+            <p class="btn btn-outline-info p-1">PHP</p>
+            <p class="btn btn-outline-info p-1">Laravel</p>
+            <p class="btn btn-outline-info p-1">CSS</p>
+            <p class="btn btn-outline-info p-1">JS</p>
+            <p class="btn btn-outline-info p-1">Bootstrap</p>
+            <hr class="d-none d-lg-block">
+            <p>Web Account Manager, to manage multiple accounts</p>
+            <hr class="d-sm-block d-lg-none">
+          </div>
+         
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-4.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">E-Garansi UI Design</h4>
             <p class="btn btn-outline-info p-1">AdobeXD</p>
             <hr class="d-none d-lg-block">
             <p>E-Garansi Web Design built with AdobeXD</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-1.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">Freehand Landing Page</h4>
             <p class="btn btn-outline-info p-1">HTML</p>
             <p class="btn btn-outline-info p-1">CSS</p>
@@ -312,10 +343,10 @@
             <p>Design By Figmago Convert to Template By Me</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-5.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">Coinbase Crypto Template</h4>
             <p class="btn btn-outline-info p-1">HTML</p>
             <p class="btn btn-outline-info p-1">SASS</p>
@@ -325,10 +356,10 @@
             <p>Design By Creamory Convert to Template By Me</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-6.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">Corona Realtime Data</h4>
             <p class="btn btn-outline-info p-1">PHP</p>
             <p class="btn btn-outline-info p-1">CSS</p>
@@ -338,24 +369,10 @@
             <p>Corona Real Time Data API by Kawalcorona</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
-            <img src="img/portfolio-3.png" class="img-fluid img-portfolio border" alt="Services5">
-          </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
-            <h4 class="mt-lg-5">Web Account Manager</h4>
-            <p class="btn btn-outline-info p-1">PHP</p>
-            <p class="btn btn-outline-info p-1">Laravel</p>
-            <p class="btn btn-outline-info p-1">CSS</p>
-            <p class="btn btn-outline-info p-1">JS</p>
-            <p class="btn btn-outline-info p-1">Bootstrap</p>
-            <hr class="d-none d-lg-block">
-            <p>Web Acoount Manager, to manage multiple accounts</p>
-            <hr class="d-sm-block d-lg-none">
-          </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-7.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">Productly Landing Page</h4>
             <p class="btn btn-outline-info p-1">HTML</p>
             <p class="btn btn-outline-info p-1">CSS</p>
@@ -366,10 +383,10 @@
             <p>UI Design by someone Convert to Template By Me</p>
             <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-8.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">Corona Game</h4>
             <p class="btn btn-outline-info p-1">HTML</p>
             <p class="btn btn-outline-info p-1">CSS</p>
@@ -377,12 +394,12 @@
             <hr class="d-none d-lg-block">
             <p>Virtual Skill Competition Web Technoligies by GDTLAB Indonesia</p>
             <!-- asdsad -->
-            <hr class="d-sm-block d-lg-none" data-aos="fade-down">
+            <hr class="d-sm-block d-lg-none">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-9.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
-          <div class="col-lg-6 my-2 my-lg-5" data-aos="fade-down">
+          <div class="col-lg-6 my-2 my-lg-5">
             <h4 class="mt-lg-5">Library Management Apps</h4>
             <p class="btn btn-outline-info p-1">Java</p>
             <p class="btn btn-outline-info p-1">Netbeans</p>
