--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="navbar-nav navbar-utama ml-auto px-5 px-lg-0">
             <a class="nav-item nav-link my-2" href="#hero">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link my-2" href="#services">Skills</a>
-            <a class="nav-item nav-link my-2" href="#services2">Portfolio</a>
+            <a class="nav-item nav-link my-2" href="#projects">Portfolio</a>
             <a class="nav-item nav-link my-2" href="#akhir">Contact</a>
             <a class="nav-item nav-link tombol-sign btn btn-outline-dark ml-0 ml-lg-5 my-2 px-4" href="https://github.com/AnandaArya"><i class="fab fa-github fa-lg"></i></a>
             <a class="nav-item nav-link btn btn-dark ml-0 ml-lg-2 my-2 px-4" href="https://www.instagram.com/ananda.aryaa/"><i class="fab fa-instagram fa-lg ig-color"></i></a>
@@ -254,14 +254,13 @@
             <img src="img/portfolio-12.jpg" class="img-fluid img-portfolio border" alt="Services5">
           </div>
           <div class="col-lg-6 my-2 my-lg-5">
-            <h4 class="mt-lg-5">JIE Community Website Profile |</h4>
+            <h4 class="mt-lg-5">JIE Community Website Profile</h4>
             <p class="btn btn-outline-info p-1">JavaScript</p>
             <p class="btn btn-outline-info p-1">NextJS</p>
             <p class="btn btn-outline-info p-1">ReactJS</p>
             <p class="btn btn-outline-info p-1">TailwindCSS</p>
             <hr class="d-none d-lg-block">
-            <p>platform that caters to gaming enthusiasts, providing a seamless and
-              secure top-up service for various popular games</p>
+            <p>Jakarta International English Community website profile, built with JavaScript, NextJS, ReactJS, TailwindCSS</p>
             <hr class="d-sm-block d-lg-none">
           </div>
           <div class="col-lg-6 my-2 my-lg-5">
