--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">  
     <link rel="stylesheet" href="css/style.css">
 
     <!-- Fonts -->
@@ -242,11 +242,8 @@
       <div class="container">
         <div class="row" data-aos="fade-down">
           <div class="col">
-            <!-- <p>OUR SERVICES</p> -->
-            <!-- <hr> -->
-            <h3>Portfolio</h3>
+            <h3>Projects</h3>
             <hr>
-            <!-- <p>This is list of portfolio that i have</p> -->
           </div>
         </div>
         <div class="row justify-content-between">
@@ -333,19 +330,6 @@
             <hr class="d-sm-block d-lg-none">
           </div>
           <div class="col-lg-6 my-2 my-lg-5">
-            <img src="img/portfolio-1.png" class="img-fluid img-portfolio border" alt="Services5">
-          </div>
-          <div class="col-lg-6 my-2 my-lg-5">
-            <h4 class="mt-lg-5">Freehand Landing Page</h4>
-            <p class="btn btn-outline-info p-1">HTML</p>
-            <p class="btn btn-outline-info p-1">CSS</p>
-            <p class="btn btn-outline-info p-1">JS</p>
-            <p class="btn btn-outline-info p-1">Bootstrap</p>
-            <hr class="d-none d-lg-block">
-            <p>Design By Figmago Convert to Template By Me</p>
-            <hr class="d-sm-block d-lg-none">
-          </div>
-          <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-5.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
           <div class="col-lg-6 my-2 my-lg-5">
@@ -358,6 +342,20 @@
             <p>Design By Creamory Convert to Template By Me</p>
             <hr class="d-sm-block d-lg-none">
           </div>
+          <div class="col-lg-6 my-2 my-lg-5">
+            <img src="img/portfolio-1.png" class="img-fluid img-portfolio border" alt="Services5">
+          </div>
+          <div class="col-lg-6 my-2 my-lg-5">
+            <h4 class="mt-lg-5">Freehand Landing Page</h4>
+            <p class="btn btn-outline-info p-1">HTML</p>
+            <p class="btn btn-outline-info p-1">CSS</p>
+            <p class="btn btn-outline-info p-1">JS</p>
+            <p class="btn btn-outline-info p-1">Bootstrap</p>
+            <hr class="d-none d-lg-block">
+            <p>Design By Figmago Convert to Template By Me</p>
+            <hr class="d-sm-block d-lg-none">
+          </div>
+
           <div class="col-lg-6 my-2 my-lg-5">
             <img src="img/portfolio-6.png" class="img-fluid img-portfolio border" alt="Services5">
           </div>
@@ -424,26 +422,11 @@
               <h3>Interested work with me?</h3>
           </div>
           <div class="col-lg-6 my-2 my-lg-4 text-center text-lg-right">
-              <a href="#" class="btn btn-light px-4 mr-lg-2 mt-2 mt-md-0 rounded">View More Project</a>
-              <a href="mailto:anandaar0404@gmail.com" class="btn btn-outline-light px-4 rounded mt-2 mt-md-0"><i class="fal fa-envelope fa-lg"> Mail Me.....</i></a>
+              <a href="mailto:anandaar0404@gmail.com" class="btn btn-outline-light px-4 rounded mt-2 mt-md-0"><i class="fal fa-envelope fa-lg"> email: anandaarya.dev@gmail.com</i></a>
           </div>
         </div>
       </div>
     </section>
-<!-- 
-    <section class="akhir mb-5">
-      <div class="container">
-        <div class="row">
-          <div class="col-12 bg-akhir text-center">
-              <h3>Hire me now</h3>
-              <p>Interested work with me? Contact Now</p>
-              <a href="#" class="btn btn-light px-5 my-3 rounded-pill">View Project</a>
-              <a href="#" class="btn btn btn-outline-light px-5 my-3 ml-2 rounded-pill">Contact</a>
-          </div>
-        </div>
-      </div>
-    </section> -->
-
     <section class="footer-2">
       <div class="container">
         <hr>
@@ -452,10 +435,10 @@
             <h3>Social Media</h3>
           </div>
           <div class="col-lg-6 my-4 text-lg-right">
-            <a href="https://www.instagram.com/ananda.aryaa/" class="mr-3"><i class="fab fa-facebook-square fa-3x fb-color"></i></a>
-            <a href="https://web.facebook.com/ananda.pratamaarridho" class="mr-3"><i class="fab fa-instagram fa-3x insta-color"></i></a>
-            <a href="https://wa.me/089664704055" class="mr-3"><i class="fab fa-whatsapp-square fa-3x wa-color"></i></a>
-            <a href="https://line.me/R/ti/p/arya02104" class="mr-3"><i class="fab fa-line fa-3x line-color"></i></a>
+            <a href="mailto:anandaarya.dev@gmail.com" target="_blank" class="mr-3"><i class="fal fa-envelope-square fa-3x fb-color"></i></a>
+            <a href="https://web.facebook.com/ananda.pratamaarridho" target="_blank" class="mr-3"><i class="fab fa-instagram fa-3x insta-color"></i></a>
+            <a href="https://wa.me/089664704055" target="_blank" class="mr-3"><i class="fab fa-whatsapp-square fa-3x wa-color"></i></a>
+            <a href="https://www.linkedin.com/in/ananda-arya/" target="_blank" class="mr-3"><i class="fab fa-linkedin fa-3x linkedin-color"></i></a>
           </div>
         </div>
       </div>
