--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             <!-- <h3>Hello<br> My Name is Ananda Arya Pratama</h3> -->
             <p class="my-3">I am a Software Engineering graduate and an IT Enthusiast. My areas of expertise include both front-end 
               and back-end development.</p>
-            <a href="#" class="btn btn-primary px-4 my-3">View Project</a>
-            <a href="#" class="btn btn-outline-primary px-3 my-4 ml-2">Learn More</a>
+            <a href="#projects" class="btn btn-primary px-4 my-3">View Project</a>
+            <a href="#projects" class="btn btn-outline-primary px-3 my-4 ml-2">Learn More</a>
           </div>
           <div class="col-lg-5">
             <img src="img/hero-img-3.png" class="img-fluid">
