--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           </div>
         </div>
         <div class="row mt-0 mt-md-5">
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -85,7 +85,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="400">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="400">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -97,7 +97,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
             <div class="card">
               <div class="card-body px-3">
                 <div class="row justify-content-center">
@@ -109,7 +109,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -121,7 +121,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -137,7 +137,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="800">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="800">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -149,7 +149,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -161,7 +161,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -177,7 +177,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
             <div class="card">
               <div class="card-body px-3">
                 <div class="row justify-content-center">
@@ -189,7 +189,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -206,7 +206,7 @@
             </div>
           </div>
           
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1200">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1200">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
@@ -218,7 +218,7 @@
               </div>
             </div>
           </div>
-          <div class="col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
