--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-html5 fa-5x html5-color"></i>
                   </div>
                 </div>
@@ -89,7 +89,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-css3-alt fa-5x css3-color"></i>
                   </div>
                 </div>
@@ -101,7 +101,7 @@
             <div class="card">
               <div class="card-body px-3">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-6 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-php fa-5x php-color"></i>
                   </div>
                 </div>
@@ -113,7 +113,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-js fa-5x js-color"></i>
                   </div>
                 </div>
@@ -125,7 +125,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <div class="row justify-content-center"">
                       <div class="col-md-11">
                         <img src="img/typescript.png" class="img-fluid">
@@ -141,7 +141,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-bootstrap fa-5x bootstrap-color"></i>
                   </div>
                 </div>
@@ -153,7 +153,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-react fa-5x react-color"></i>
                   </div>
                 </div>
@@ -165,7 +165,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <div class="row justify-content-center"">
                       <div class="col-md-11">
                         <img src="img/nextjs.png" class="img-fluid">
@@ -181,7 +181,7 @@
             <div class="card">
               <div class="card-body px-3">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-node fa-5x nodejs-color"></i>
                   </div>
                 </div>
@@ -193,8 +193,8 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <div class="row justify-content-center"">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                    <div class="row justify-content-center">
                       <div class="col-md-11">
                         <img src="img/express-logo.png" class="img-fluid">
                       </div>
@@ -210,7 +210,7 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
                     <i class="fab fa-laravel fa-5x laravel-color"></i>
                   </div>
                 </div>
@@ -222,8 +222,8 @@
             <div class="card">
               <div class="card-body px-4">
                 <div class="row justify-content-center">
-                  <div class="col-3 col-md-5 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <div class="row justify-content-center"">
+                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
+                    <div class="row justify-content-center">
                       <div class="col-md-11">
                         <img src="img/mongodb.png" class="img-fluid">
                       </div>
