--- a/index.html
+++ b/index.html
@@ -76,164 +76,101 @@
           <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-html5 fa-5x html5-color"></i>
-                  </div>
-                </div>
+                <img src="img/skills/html-icon.png" alt="logo" class="img-fluid">
                 <h5 class="card-title mt-4 text-center">HTML</h5>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="400">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-css3-alt fa-5x css3-color"></i>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">CSS</h5>
+                <img src="img/skills/css3-icon.png" alt="logo" class="img-fluid">
+                <h5 class="card-title mt-4 text-center">CSS3</h5>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
-            <div class="card">
-              <div class="card-body px-3">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-php fa-5x php-color"></i>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">PHP</h5>
-              </div>
-            </div>
-          </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-js fa-5x js-color"></i>
-                  </div>
-                </div>
+                <img src="img/skills/javascript-icon.png" alt="logo" class="img-fluid">
                 <h5 class="card-title mt-4 text-center">JavaScript</h5>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <div class="row justify-content-center"">
-                      <div class="col-md-11">
-                        <img src="img/typescript.png" class="img-fluid">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">Typescript</h5>
+                <img src="img/skills/typescript-icon.png" alt="logo" class="img-fluid">
+                <h5 class="card-title mt-4 text-center">TypeScript</h5>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="800">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-bootstrap fa-5x bootstrap-color"></i>
-                  </div>
-                </div>
+                <img src="img/skills/php-icon.png" alt="logo" class="img-fluid">
+                <h5 class="card-title mt-4 text-center">PHP</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <img src="img/skills/bootstrap-icon.png" alt="logo" class="img-fluid">
                 <h5 class="card-title mt-4 text-center">Bootstrap</h5>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-react fa-5x react-color"></i>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">ReactJS</h5>
+                <img src="img/skills/tailwind-icon.png" alt="logo" class="img-fluid">
+                <h5 class="card-title mt-4 text-center">TailwindCSS</h5>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <div class="row justify-content-center"">
-                      <div class="col-md-11">
-                        <img src="img/nextjs.png" class="img-fluid">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">NextJS</h5>
+                <img src="img/skills/nodejs-icon.png" alt="logo" class="img-fluid">
+                <h5 class="card-title mt-4 text-center">Node.js</h5>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1000">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
-              <div class="card-body px-3">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-node fa-5x nodejs-color"></i>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">NodeJS</h5>
+              <div class="card-body px-4">
+                <img src="img/skills/reactjs-icon.png" alt="logo" class="img-fluid">
+                <h5 class="card-title mt-4 text-center">React.js</h5>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <div class="row justify-content-center">
-                      <div class="col-md-11">
-                        <img src="img/express-logo.png" class="img-fluid">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">Express</h5>
+                <img src="img/skills/nextjs.png" alt="logo" class="img-fluid">
+                <h5 class="card-title mt-4 text-center">Next.js</h5>
               </div>
             </div>
           </div>
-          
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="1200">
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <i class="fab fa-laravel fa-5x laravel-color"></i>
-                  </div>
-                </div>
+                <img src="img/skills/express-logo.png" alt="logo" class="img-fluid">
+                <h5 class="card-title mt-4 text-center">Express.js</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <img src="img/skills/laravel-icon.png" alt="logo" class="img-fluid">
                 <h5 class="card-title mt-4 text-center">Laravel</h5>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="600">
-            <div class="card">
-              <div class="card-body px-4">
-                <div class="row justify-content-center">
-                  <div class="col-12 col-lg-6 col-skill border rounded-lg py-3 text-center">
-                    <div class="row justify-content-center">
-                      <div class="col-md-11">
-                        <img src="img/mongodb.png" class="img-fluid">
-                      </div>
-                    </div>
-                  </div>
-                </div>
-                <h5 class="card-title mt-4 text-center">Mongodb</h5>
-              </div>
-            </div>
-          </div>
+
+          
         </div>
       </div>
     </section>
