--- a/index.html
+++ b/index.html
@@ -72,16 +72,153 @@
             <p>This is list of skills i have</p>
           </div>
         </div>
-        <div class="row mt-0 mt-md-5">
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+        <div class="row justify-content-center mt-0 mt-md-5">
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
-                <img src="img/skills/html-icon.png" alt="logo" class="img-fluid">
-                <h5 class="card-title mt-4 text-center">HTML</h5>
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/html-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.5vw;">HTML</h6>
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/css3-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.5vw;">CSS3</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/javascript-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.5vw;">JavaScript</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/typescript-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">TypeScript</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/php-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">PHP</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/bootstrap-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Bootstrap</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/tailwind-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">TailwindCSS</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/laravel-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Laravel</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/nodejs-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Node.js</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/express-logo.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Express.js</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/reactjs-icon.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">React.js</h6>
+              </div>
+            </div>
+          </div>
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+            <div class="card">
+              <div class="card-body px-4">
+                <div class="row justify-content-center">
+                  <div class="col-md-12 col-lg-6">
+                    <img src="img/skills/nextjs.png" alt="logo" class="img-fluid">
+                  </div>
+                </div>
+                <h6 class="card-title mt-4 text-center" style="font-size: 1.4vw;">Next.js</h6>
+              </div>
+            </div>
+          </div>
+          
+          <!-- <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <img src="img/skills/css3-icon.png" alt="logo" class="img-fluid">
@@ -89,7 +226,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <img src="img/skills/javascript-icon.png" alt="logo" class="img-fluid">
@@ -97,7 +234,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <img src="img/skills/typescript-icon.png" alt="logo" class="img-fluid">
@@ -105,7 +242,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <img src="img/skills/php-icon.png" alt="logo" class="img-fluid">
@@ -113,7 +250,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <img src="img/skills/bootstrap-icon.png" alt="logo" class="img-fluid">
@@ -121,7 +258,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <img src="img/skills/tailwind-icon.png" alt="logo" class="img-fluid">
@@ -129,7 +266,7 @@
               </div>
             </div>
           </div>
-          <div class="col-3 col-md-6 col-lg-3 mb-3" data-aos="fade-down" data-aos-delay="200">
+          <div class="col-3 mb-3" data-aos="fade-down" data-aos-delay="200">
             <div class="card">
               <div class="card-body px-4">
                 <img src="img/skills/nodejs-icon.png" alt="logo" class="img-fluid">
@@ -168,7 +305,7 @@
                 <h5 class="card-title mt-4 text-center">Laravel</h5>
               </div>
             </div>
-          </div>
+          </div> -->
 
           
         </div>
